[package]
name = "rust_keyvaldb"
version = "0.1.0"
authors = ["hugcis <hmj.cisneros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8.2"
serde = "1.0.118"
serde_json = "1.0"